# optimus-prime

./: .gitignore  README.md  config.py  main.py  model.py  pyproject.toml  run.py  train.py
src/: attention.py  feedforward.py  transformer.py
