[tool.poetry]
name = "optimus_prime"
version = "0.1.0"
description = ""
authors = ["Nicholas Lai Jin Yung <nicklai88@live.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.7.1"
datasets = "^3.6.0"
tqdm = "^4.67.1"
transformers = "^4.52.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
